src/test/deca/context/invalid/affectation-undefinedVariable.context
affectation-undefinedVariable.deca:3: